<resources>
    <string name="app_name">IUT Cafe Gap</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="ip_address">IP Address</string>
    <string name="button_scan">Scan</string>
    <string name="id">شماره بلیط:</string>
    <string name="name">نام:</string>
    <string name="reception">پذیرش انجام شده است.</string>
    <string name="lunch">ناهار داده شده است.</string>
    <string name="snack">میان وعده داده شده است.</string>
    <string name="error">Error</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_participant">Participant</string>

</resources>
